# medical-telegram-warehouse

./: .gitignore  README.md  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
api/: db.py  main.py  schemas.py
api/routers/: search.py
config/: paths.yaml
dbt/medical_warehouse/: .user.yml
dbt/medical_warehouse/models/marts/: fct_image_detections.sql  fct_messages.sql  schema.yml
dbt/medical_warehouse/models/staging/: stg_yolo_image_detections.sql
dbt/medical_warehouse/tests/: assert_no_future_messages.sql
orchestration/: pipeline.py
orchestration/ops/: dbt.py  yolo.py
scripts/: run_api.sh  run_dbt.py  run_dbt.sh  run_pipeline.sh  run_raw_data_loader_to_postgres.sh  run_scraper.sh  run_yolo.sh
src/medi_tg_analytics/core/: settings.py
src/medi_tg_analytics/enrichment/: yolo_detect.py
src/medi_tg_analytics/loading/: yolo_csv_to_db.py
src/medi_tg_analytics/scraping/: scraper.py
tests/: test_scraper.py
